import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

syntax = "proto3";

package post;


service PostService {
  
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);

  
  rpc GetPostById (GetPostByIdRequest) returns (GetPostByIdResponse);

  
  rpc GetAllPosts (google.protobuf.Empty) returns (GetAllPostsResponse);

 
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}


message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author = 3;
}


message CreatePostResponse {
  Post post = 1;
}

message GetPostByIdRequest {
  string id = 1;
}


message GetPostByIdResponse {
  Post post = 1;
}


message GetAllPostsResponse {
  repeated Post posts = 1;
}


message DeletePostRequest {
  string id = 1;
}


message DeletePostResponse {
  string message = 1;
}


message Post {
  string _id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
 google.protobuf.Timestamp createdAt = 5;
 google.protobuf.Timestamp updatedAt = 6;
}
